# POI-Extraktion-mit-erweiterter-Area-Centroid-Bestimmung

./: README.md
Code/: README.md
Code/Calculation(Rust)/: Cargo.toml
Code/Calculation(Rust)/output/: .directory
Code/Calculation(Rust)/output/load_polygon_test/: bw.exported
Code/Calculation(Rust)/output/point_centrality/: .directory  brandenburg.diagonals  brandenburg.skeleton  brandenburg.skeleton_central_points_betweenness  brandenburg.skeleton_central_points_closeness  bremen.skeleton  bremen.skeleton_central_points  bremen.skeleton_central_points_betweenness  bremen.skeleton_central_points_closeness  bw.diagonals  bw.skeleton  bw.skeleton_central_points  bw.skeleton_central_points_betweenness  bw.skeleton_central_points_closeness  niedersachsen.skeleton  niedersachsen.skeleton_central_points  niedersachsen.skeleton_central_points_betweenness  niedersachsen.skeleton_central_points_closeness  nordrhein-westfahlen.diagonals  nordrhein-westfahlen.skeleton  nordrhein-westfahlen.skeleton_central_points  nordrhein-westfahlen.skeleton_central_points_betweenness  nordrhein-westfahlen.skeleton_central_points_closeness  rheinlandpfalz.skeleton  rheinlandpfalz.skeleton_central_points_betweenness  rheinlandpfalz.skeleton_central_points_closeness  saarland.skeleton  saarland.skeleton_central_points_betweenness  saarland.skeleton_central_points_closeness  triangulation_skeleton_graph.diagonals  triangulation_skeleton_graph.skeleton  (+3 more)
Code/Calculation(Rust)/src/: lib.rs  main.rs  point_in_polyon_test.rs  test_library.rs  topological_polygon_sorting.rs
(+194 files in other folders)
