[package]
name = "osm_area_extractor_rs"
version = "0.1.0"
authors = ["Filip Krumpe <filip.krumpe@fmi.uni-stuttgart.de>", "Lukas Baur <st141998@stud.uni-stuttgart.de>", ]
edition = "2018"

[lib]
name = "library"
path = "src/lib.rs"

[dependencies]
osmpbfreader = "0.12.0"
poly2tri = "0.1.0"
priority-queue = "0.5.2"
libc = "0.2.0"
num = "0.2"